refactor: date to epoch